remaniement code: on passe l'intelligence sur le serveur nodejs IL y a du code qui va passer cote server, et le code cote client va etre allege

--- a/bombermanM.html
+++ b/bombermanM.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="" />
     <meta name="author" content="" />
 
-	<script src="http://localhost:1338/socket.io/socket.io.js"></script>
+	<script src="http://pnxt06:1338/socket.io/socket.io.js"></script>
 	<script src="lib3/main.js"></script>    
 	<script src="lib3/canvas.js"></script>    
 	<script src="bombermanM.js"></script>
@@ -50,7 +50,7 @@
 		text-align:center;
 		padding-top:400px;
 	}
-	#layer_map, #layer_bomb, #layer_perso{
+	#layer_map, #layer_bomb, #layer_perso, #layer_perso2{
 		position:absolute;
 		top:0px;
 		width:900px;
@@ -157,6 +157,7 @@
 		<div id="content"  >
 		<canvas id="layer_map" width="900" height="700"></canvas>
 		<canvas id="layer_perso" width="900" height="700"></canvas>
+		<canvas id="layer_perso2" width="900" height="700"></canvas>
 		<canvas id="layer_bomb" width="900" height="700"></canvas>
 		
 		</div>	
