--- a/bombermanM.html
+++ b/bombermanM.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="" />
     <meta name="author" content="" />
 
-	<script src="http://pnxt06:1338/socket.io/socket.io.js"></script>
+	<script src="http://localhost:1338/socket.io/socket.io.js"></script>
 	<script src="lib3/main.js"></script>    
 	<script src="lib3/canvas.js"></script>    
 	<script src="bombermanM.js"></script>
